Fixes for code block letter spacing and .description not getting styling for p tags

--- a/_styles/base.less
+++ b/_styles/base.less
@@ -52,7 +52,7 @@ h6{
 	font-size:13px;
 }
 
-p {
+p, .p {
 	font-size: 14px;
 	line-height: 24px;
 	margin-top: 0;
