--- a/_styles/code.less
+++ b/_styles/code.less
@@ -1,11 +1,10 @@
 code {
-	letter-spacing: -1px;
 	background-color: lighten(@color, 40%);
 }
 pre, code, pre *, code * {
 	font-family: "Courier New", Courier, mono;
     font-style: normal;
-    font-weight: normal;
+    font-weight: normal; 
 }
 pre {
   background-color: #fff;
